update sept 7 2024, javafx folder, reorganization